Wed Apr  5 12:35:18 2000  Hans-Peter Nilsson  <hp@axis.com>

	* optabs.c (emit_libcall_block): Remove spurious REG_EQUAL notes
	from the insn where REG_RETVAL is added.
	(emit_no_conflict_block): Ditto.

Wed Apr  5 18:03:31 2000  Toshiyasu Morita  (toshi.morita@sega.com)
                          J"orn Rennecke <amylaar@cygnus.co.uk>

	* sh.c (block_lump_real_i4): Add missing clobber of T_REG
	(block_lump_real): Likewise.

2000-04-05  Chris Demetriou  <cgd@netbsd.org>

	* mips.h (MASK_DEBUG_A, MASK_DEBUG_B, MASK_DEBUG_C): Zero the
	remaining non-zero debugging masks.

Wed Apr  5 09:44:07 2000  Jeffrey A Law  (law@cygnus.com)

	* basic-block.h (verify_flow_info): Declare.
	(flow_loop_outside_edge_p): Declare.
	* flow.c (verify_flow_info): Remove declaration.
	(clear_log_links, flow_loop_outside_edge_p): Likewise.

Wed Apr  5 09:34:26 2000  Philippe De Muyter <phdm@macqel.be>

	* m68k/m68k-protos.h (finalize_pic): Turn prototype off using `#if 0',
	not C++ comments.

2000-04-05  Jakub Jelinek  <jakub@redhat.com>

	* config/sparc/sparc.md (snedi_zero+1, neg_snedi_zero+1,
	snedi_zero_trunc+1, seqdi_zero+1, neg_seqdi_zero+1,
	seqdi_zero_trunc+1): Allow splits only if registers are
	different.

2000-04-04  Ulrich Drepper  <drepper@cygnus.com>

	* acconfig.h: Add HAVE_GAS_HIDDEN.
	* config.in: Regenerated.
	* configure.in: Add test for .hidden pseudo-op in gas.
	* configure: Regenerated.
	* crtstuff.c: Include auto-host.h.
	Emit additional .hidden pseudo-op for __dso_handle if the
	assembler knows about it.

2000-04-04  Philippe De Muyter  <phdm@macqel.be>

	* cpphash.c (_cpp_free_definition): Test argnames, not nargs >= 0,
	before freeing argnames.
	* cpplib.c (do_ifndef): Cast return value of xstrdup.

2000-04-05  Michael Meissner  <meissner@redhat.com>

	* config/rs6000/rs6000.c (print_operand): Patch from Jonathan
	Walton <jonboy@gordian.com> to make memory references with update
	work wtih -mregnames.

2000-04-04  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
